hphp/hack/test/typecheck/inout/bad_inout_use_lvalue3.php.exp
File "bad_inout_use_lvalue3.php", line 10, characters 11-31:
You cannot decorate this argument as `inout` (Parsing[1002])
